--- a/code/terremotos_limpieza_analisis.Rmd
+++ b/code/terremotos_limpieza_analisis.Rmd
@@ -46,11 +46,54 @@ Cada registro representa un evento sismico y contiene los siguientes campos:
 Primero, importaremos el dataset.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
-#Importamos el data set
-data_fifa<-read.csv("../data/terremotos_centro_sur_america.csv",header=T,sep=",")
-
-head(data_fifa)
+# Importamos el data set
+data_terremotos<-read.csv("../data/terremotos_centro_sur_america.csv",header=T,sep=",")
+head(data_terremotos)
+# Cantidad de registros
+dim(data_terremotos)[1]
 ```
+
+***Fecha y hora:***
+
+Convertiremos la fecha y hora del tipo de cadena de texto al de fecha y hora:
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Cargamos la librería Lubridate 
+library(lubridate)
+
+# Convertimos a tipo fecha y hora
+data_terremotos$Fecha.y.Hora <- dmy_hms(substr(data_terremotos$Fecha.y.Hora, start = 1 , stop = 20) )
+head(data_terremotos$Fecha.y.Hora)
+```
+
+Creamos algunas columnas adicionales que serán útiles al momento de realizar los analisis.
+
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Número de mes
+data_terremotos$Mes <- month(data_terremotos$Fecha.y.Hora)
+# Hora
+data_terremotos$Hora <- hour(data_terremotos$Fecha.y.Hora)
+# Día de la semana
+data_terremotos$Dia.Semana <- wday(data_terremotos$Fecha.y.Hora, label = TRUE, abbr = FALSE)
+```
+
+***Magnitud y Profundidad***
+
+Tranformaremos los campos de Magnitud y Profundidad de tipo cadena de texto a valores numéricos:
+
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Convertimos a tipo numérico la Magnitud
+data_terremotos$Magnitud <- as.numeric(data_terremotos$Magnitud)
+
+# Quitamos los caracteres y convertimos a tipo numérico la Profundidad
+data_terremotos$Profundidad <- gsub('Â', '', data_terremotos$Profundidad)
+data_terremotos$Profundidad <- gsub('km', '', data_terremotos$Profundidad)
+data_terremotos$Profundidad <- gsub('.{1}$', '', data_terremotos$Profundidad)
+data_terremotos$Profundidad <- as.numeric(data_terremotos$Profundidad)
+```
+
 
 
 ******
@@ -59,7 +102,89 @@ head(data_fifa)
 
 ##  Elementos vacios
 
+Vamos a revisar los valores vacios del dataset:
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Estadísticas de valores vacíos
+colSums(is.na(data_terremotos))
+colSums(data_terremotos[c("Magnitud","Profundidad","Ubicacion")]=="")
+```
+
+Podemos observar que no existen valores nulos, por lo que no será necesario realizar un tratamiento.
+
 ##  Valores extremos
+
+Primero, realizaremos un analisis de los valores extremos para la Profundidad y la Magnitud de manera individual a través de boxplots.
+
+Analizaremos la Profundidad.
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Calcular el boxplot de la Profundidad
+Profundidad.bp <- boxplot(data_terremotos$Profundidad)
+# Calculamos el rango de los outliers
+range(Profundidad.bp$out)
+# Calcular la cantidad de los outliers
+length(Profundidad.bp$out)
+```
+
+Podemos observar que existen 159 valores outliers de la variable Profundidad que **tienen valores entre 288 a 750 km.**
+
+Ahora, analizaremos la Magnitud.
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Calcular el boxplot de la Magnitud
+Magnitud.bp <- boxplot(data_terremotos$Magnitud)
+# Calculamos el rango de los outliers
+range(Magnitud.bp$out)
+# Calcular la cantidad de los outliers
+length(Magnitud.bp$out)
+```
+
+Observamos que o existen outliers de la variable Magnitud.
+
+También, analizaremos las variables Profundidad y Magnitud utilizando la **distancia de Mahalanobis** para encontrar 100 outliers.
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+#ap <- data.frame(Altura.cm=c(164, 167, 168, 169, 169, 170, 170, 170, 171,172, 172, 173, 173, 175, 176, 178), Peso.kg=c( 54, 57, 58, 60, 61, 60,61, 62, 62, 64, 62, 62, 64, 56, 66, 70))
+
+
+#Criterio +/-2SD
+ap <- data_terremotos[,c("Profundidad","Magnitud")]
+Profundidad.outlier <- abs(scale(data_terremotos$Profundidad)) > 2
+Magnitud.outlier <- abs(scale(data_terremotos$Magnitud)) > 2
+pch <- (Profundidad.outlier | Magnitud.outlier) * 12
+pch <- pch + 4
+col <- (Profundidad.outlier | Magnitud.outlier) * 12
+col <- pch + 4
+  
+par(mfrow=c(1,2))
+plot(ap, pch=pch,col=col,main="Criterio +-2 Desv.Stand.")
+
+#Criterio distancia Mahalanobis (los dos outliers más extremos)
+n.outliers <- 100
+m.dist.order <- order(mahalanobis(ap, colMeans(ap), cov(ap)), decreasing=TRUE)
+is.outlier <- rep(FALSE, nrow(ap))
+is.outlier[m.dist.order[1:n.outliers]] <- TRUE
+pch <- is.outlier * 12
+pch <- pch + 4
+col <- is.outlier * 12
+col <- pch + 4
+plot(ap, pch=pch,col=col,main="Criterio distancia mahalanobis")
+```
+
+Podemos observar que los outliers, según el criterio de mahalanobis, son puntos con altos valores de Profundidad; al igual que con el criterio de -+2 desviaciones estandar. Esto se debe a la manera en que están distribuidos los datos, donde se observa que la Profundidad es la variable con mayor dispersión. 
+
+Hallaremos el rango de los 100 puntos extremos calculados:
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Rango de los outliers
+range(ap[is.outlier,]$Profundidad)
+```
+
+Finalmente, concluimos que existen 159 outliers con **Profundidades mayores a 288 km (criterio +-2Desv.).** De los cuales los 100 outliers más extremos tienen **Profundidades mayores a 523 km (Criterio mahalanobis).**
+
+Al ser datos reales de sismos, no haremos ningún tratamiento adicional a estos valores.
+
 
 ******
 # Analisis de datos
@@ -86,3 +211,9 @@ head(data_fifa)
 ******
 # Código
 ******
+
+
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+
+```
