--- a/code/terremotos_limpieza_analisis.Rmd
+++ b/code/terremotos_limpieza_analisis.Rmd
@@ -22,6 +22,18 @@ knitr::opts_chunk$set(eval=T, echo=T)
 ```
 
 
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+# Instala paquetes que faltan por instalarse
+
+list.of.packages <- c("lubridate", "stringr", "tidygeocoder", "dplyr")
+new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
+if(length(new.packages)) install.packages(new.packages, repos='https://cran.rediris.es/')
+```
+
+
+
+
 ******
 # Descripción del dataset
 ******
@@ -57,7 +69,10 @@ Primero, importaremos el dataset.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
 # Importamos el data set
-data_terremotos<-read.csv("../data/terremotos_centro_sur_america.csv",header=T,sep=",")
+data_terremotos<-read.csv("../data/terremotos_centro_sur_america.csv", encoding="UTF-8", header=T,sep=",")
+
+# Importamos los paises de America en una variable para usarla como referencia en el codigo.
+paises_de_america<-read.csv("../data/Paises.csv", encoding="ANSI", header=T,sep=",")
 head(data_terremotos)
 # Cantidad de registros
 dim(data_terremotos)[1]
@@ -104,7 +119,122 @@ data_terremotos$Profundidad <- gsub('.{1}$', '', data_terremotos$Profundidad)
 data_terremotos$Profundidad <- as.numeric(data_terremotos$Profundidad)
 ```
 
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+library(stringr)
 
+# Funcion que busca una palabra a partir de cierta posicion en R.
+# Autor: Hadley Wickham
+# Fuente: https://github.com/tidyverse/stringr/blob/master/R/word.r
+
+word <- function(string, start = 1L, end = start, sep = fixed(" ")) {
+  args <- vctrs::vec_recycle_common(string = string, start = start, end = end)
+  string <- args$string
+  start <- args$start
+  end <- args$end
+
+  breaks <- str_locate_all(string, sep)
+  words <- lapply(breaks, invert_match)
+
+  # Convert negative values into actual positions
+  len <- vapply(words, nrow, integer(1))
+
+  neg_start <- !is.na(start) & start < 0L
+  start[neg_start] <- start[neg_start] + len[neg_start] + 1L
+
+  neg_end <- !is.na(end) & end < 0L
+  end[neg_end] <- end[neg_end] + len[neg_end] + 1L
+
+  # Replace indexes past end with NA
+  start[start > len] <- NA
+  end[end > len] <- NA
+
+  # To return all words when trying to extract more words than available
+  start[start < 1L] <- 1
+
+  # Extract locations
+  starts <- mapply(function(word, loc) word[loc, "start"], words, start)
+  ends <-   mapply(function(word, loc) word[loc, "end"], words, end)
+
+  str_sub(string, starts, ends)
+}
+
+
+# Verifica si el texto contiene alguno de los puntos cardinales.
+
+# Función para punto cardinal
+
+ existe_punto_cardinal <- function(x) {
+  library(dplyr)
+  case_when(
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "norte" ~ "norte",
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "noreste" ~  "noreste",
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "este" ~  "este",
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "sureste" ~  "sureste",
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "sur" ~  "sur",
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "suroeste" ~  "suroeste",
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "oeste" ~  "oeste",
+    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "noroeste" ~  "noroeste",
+#    TRUE ~ x
+    TRUE ~ data_terremotos$Ubicacion
+  )
+ }
+ 
+ # Devuelve contenido de la Ubicacion del sismo  sin el texto que antecede a los puntos cardinales. Sino, retornara la misma columna.
+ 
+ zona_de_sismo2 <- function(x) {
+  y <- word(data_terremotos$Ubicacion, start = 2, sep = fixed(paste(x,' de ',sep=""))) 
+  case_when(
+    x == "norte" ~ y,
+    x == "noreste" ~ y,
+    x == "este" ~  y,
+    x == "sureste" ~  y,
+    x == "sur" ~  y,
+    x == "suroeste" ~  y,
+    x == "oeste" ~  y,
+    x == "noroeste" ~  y,
+    TRUE ~ data_terremotos$Ubicacion
+  )
+ }
+ 
+# Variable que combina las dos funciones anteriores para limpiar la columna Ubicacion. 
+ 
+data_terremotos_puntoCardinal <- str_trim(existe_punto_cardinal(data_terremotos$Ubicacion))
+
+# Analiza si la columna Ubicacion contiene alguno de los paises de America (variable declara al inicio de este fichero). Retorna la limpieza final de esta columna en una nueva columna que se agrega al dataframe en cuestion.
+
+validar_pais3 <- function(z) {
+  r <- data.frame(z)
+  s <- data.frame(paises_de_america)
+  h <- ""
+  delimitador <- ".*"
+  
+  for (a in 1:nrow(z)) {
+    for (g in 1:nrow(s)) {
+      if (grepl(paises_de_america$Paises[g], z$Zona.de.referencia[a])) {
+        r$Zona.de.referencia[a] <- str_trim(
+          paste((gsub(
+            pattern = (paste((
+              str_trim(s$Paises[g])
+            ), delimitador, sep = "")), "", x = z$Zona.de.referencia[a]
+          )), (str_trim(s$Paises[g])), sep = ""))
+        break
+      } else {
+        r$Zona.de.referencia[a] <- str_trim(z$Zona.de.referencia[a])
+      }
+    }
+  }
+  return(r)
+}
+
+# Agrega la columna Zona de referencia con ayuda de la funcion zona de sismo2.
+
+data_terremotos$Zona.de.referencia <- zona_de_sismo2(data_terremotos_puntoCardinal)
+
+data_terremotos <- validar_pais3(data_terremotos)
+
+head(data_terremotos)
+ 
+```
 
 ******
 # Limpieza
