--- a/code/terremotos_limpieza_analisis.Rmd
+++ b/code/terremotos_limpieza_analisis.Rmd
@@ -22,18 +22,6 @@ knitr::opts_chunk$set(eval=T, echo=T)
 ```
 
 
-
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-# Instala paquetes que faltan por instalarse
-
-list.of.packages <- c("lubridate", "stringr", "tidygeocoder", "dplyr")
-new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
-if(length(new.packages)) install.packages(new.packages, repos='https://cran.rediris.es/')
-```
-
-
-
-
 ******
 # Descripción del dataset
 ******
@@ -69,10 +57,7 @@ Primero, importaremos el dataset.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
 # Importamos el data set
-data_terremotos<-read.csv("../data/terremotos_centro_sur_america.csv", encoding="UTF-8", header=T,sep=",")
-
-# Importamos los paises de America en una variable para usarla como referencia en el codigo.
-paises_de_america<-read.csv("../data/Paises.csv", encoding="ANSI", header=T,sep=",")
+data_terremotos<-read.csv("../data/terremotos_centro_sur_america.csv",header=T,sep=",")
 head(data_terremotos)
 # Cantidad de registros
 dim(data_terremotos)[1]
@@ -119,122 +104,7 @@ data_terremotos$Profundidad <- gsub('.{1}$', '', data_terremotos$Profundidad)
 data_terremotos$Profundidad <- as.numeric(data_terremotos$Profundidad)
 ```
 
-```{r echo=TRUE, message=FALSE, warning=FALSE}
-library(stringr)
 
-# Funcion que busca una palabra a partir de cierta posicion en R.
-# Autor: Hadley Wickham
-# Fuente: https://github.com/tidyverse/stringr/blob/master/R/word.r
-
-word <- function(string, start = 1L, end = start, sep = fixed(" ")) {
-  args <- vctrs::vec_recycle_common(string = string, start = start, end = end)
-  string <- args$string
-  start <- args$start
-  end <- args$end
-
-  breaks <- str_locate_all(string, sep)
-  words <- lapply(breaks, invert_match)
-
-  # Convert negative values into actual positions
-  len <- vapply(words, nrow, integer(1))
-
-  neg_start <- !is.na(start) & start < 0L
-  start[neg_start] <- start[neg_start] + len[neg_start] + 1L
-
-  neg_end <- !is.na(end) & end < 0L
-  end[neg_end] <- end[neg_end] + len[neg_end] + 1L
-
-  # Replace indexes past end with NA
-  start[start > len] <- NA
-  end[end > len] <- NA
-
-  # To return all words when trying to extract more words than available
-  start[start < 1L] <- 1
-
-  # Extract locations
-  starts <- mapply(function(word, loc) word[loc, "start"], words, start)
-  ends <-   mapply(function(word, loc) word[loc, "end"], words, end)
-
-  str_sub(string, starts, ends)
-}
-
-
-# Verifica si el texto contiene alguno de los puntos cardinales.
-
-# Función para punto cardinal
-
- existe_punto_cardinal <- function(x) {
-  library(dplyr)
-  case_when(
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "norte" ~ "norte",
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "noreste" ~  "noreste",
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "este" ~  "este",
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "sureste" ~  "sureste",
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "sur" ~  "sur",
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "suroeste" ~  "suroeste",
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "oeste" ~  "oeste",
-    tolower(word(word(x, start = 2, sep = fixed("km al ")), 1)) == "noroeste" ~  "noroeste",
-#    TRUE ~ x
-    TRUE ~ data_terremotos$Ubicacion
-  )
- }
- 
- # Devuelve contenido de la Ubicacion del sismo  sin el texto que antecede a los puntos cardinales. Sino, retornara la misma columna.
- 
- zona_de_sismo2 <- function(x) {
-  y <- word(data_terremotos$Ubicacion, start = 2, sep = fixed(paste(x,' de ',sep=""))) 
-  case_when(
-    x == "norte" ~ y,
-    x == "noreste" ~ y,
-    x == "este" ~  y,
-    x == "sureste" ~  y,
-    x == "sur" ~  y,
-    x == "suroeste" ~  y,
-    x == "oeste" ~  y,
-    x == "noroeste" ~  y,
-    TRUE ~ data_terremotos$Ubicacion
-  )
- }
- 
-# Variable que combina las dos funciones anteriores para limpiar la columna Ubicacion. 
- 
-data_terremotos_puntoCardinal <- str_trim(existe_punto_cardinal(data_terremotos$Ubicacion))
-
-# Analiza si la columna Ubicacion contiene alguno de los paises de America (variable declara al inicio de este fichero). Retorna la limpieza final de esta columna en una nueva columna que se agrega al dataframe en cuestion.
-
-validar_pais3 <- function(z) {
-  r <- data.frame(z)
-  s <- data.frame(paises_de_america)
-  h <- ""
-  delimitador <- ".*"
-  
-  for (a in 1:nrow(z)) {
-    for (g in 1:nrow(s)) {
-      if (grepl(paises_de_america$Paises[g], z$Zona.de.referencia[a])) {
-        r$Zona.de.referencia[a] <- str_trim(
-          paste((gsub(
-            pattern = (paste((
-              str_trim(s$Paises[g])
-            ), delimitador, sep = "")), "", x = z$Zona.de.referencia[a]
-          )), (str_trim(s$Paises[g])), sep = ""))
-        break
-      } else {
-        r$Zona.de.referencia[a] <- str_trim(z$Zona.de.referencia[a])
-      }
-    }
-  }
-  return(r)
-}
-
-# Agrega la columna Zona de referencia con ayuda de la funcion zona de sismo2.
-
-data_terremotos$Zona.de.referencia <- zona_de_sismo2(data_terremotos_puntoCardinal)
-
-data_terremotos <- validar_pais3(data_terremotos)
-
-head(data_terremotos)
- 
-```
 
 ******
 # Limpieza
@@ -362,10 +232,10 @@ ks.test(data_terremotos$Profundidad, pnorm, mean(data_terremotos$Profundidad), s
 
 El p-value es menor a 0.05, por lo que se rechaza la hipotesis nula. Se acepta la hipotesis alternativa, que la Profundidad no sigue una distribución Normal.
 
-Por lo tanto, concluimos que ***la Intensidad y la Profundidad no siguen una distribución normal.***
+Por lo tanto, concluimos que ***la Magnitud y la Profundidad no siguen una distribución normal.***
 
 
-Ahora, comprobaremos la ***homocedasticidad*** (homogeneidad de la varianza). Para ello utilizaremos el test Fligner-Killeen, utilizado para datos que no cumplen con la condición de normalidad, para las variables **Magnitud y Profunidad** según los grupos de **Paises.**
+Ahora, comprobaremos la ***homocedasticidad*** (homogeneidad de la varianza). Para ello utilizaremos el test **Fligner-Killeen,** utilizado para datos que no cumplen con la condición de normalidad, para las variables **Magnitud y Profunidad** según los grupos de **Paises.**
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
 # Test Fligner-Killeen aplicado a la Intensidad para los grupos de paises.
@@ -381,7 +251,7 @@ fligner.test(Profundidad ~ Pais, data = data_terremotos)
 
 El p-value es menor a 0.05, por lo que se rechaza la hipotesis nula. Se acepta la hipotesis alternativa, que **la Profundidad presenta varianzas estadisticamente diferentes para los distintos grupos de Paises.**
 
-Por lo tanto, concluimos que ***la Intensidad y la Profundidad presentan varianzas diferentes para los Paises.***
+Por lo tanto, concluimos que ***la Magnitud y la Profundidad presentan varianzas diferentes para los Paises.***
 
 
 ##  Pruebas estadísticas
@@ -433,12 +303,85 @@ En el caso de Paraguay, decidimos no considerarla por la baja cantidad de sismos
 Podemos observar que los 3 paises con mayor magnitud son: Brazil, Chile y Mexico. Pero todos los paises tienen valores aparentemente parecidos.
 También, observamos que los 3 paises con mayor profundidad de sismo son: Argentina, Bolivia y Brazil.
 
-Analizaremos la Magnitud, 
+A continuación, realizaremos el test Kruskal-Wallis (test no paramétrico) para comprobar que las medias de la Magnitud y la Profundidad sean iguales en todos los paises. Comenzaremos con la Magnitud:
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
-
+# Test Kruskal para la Magnitud según los Paises. Sin considerar a Paraguay
+kruskal.test(Magnitud ~ Pais, data = data_terremotos[data_terremotos$Pais!='paraguay',])
 ```
 
+Dado que el p-value es menor a la 0.05 por lo que rechazamos la hipotesis nula y aceptamos la hipotesis alternativa, que es que la Magnitud muestra diferencias significativas para los diferentes paises.
+Ahora realizaremos el test a la Profundidad: 
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+# Test Kruskal para la Progundidad los Paises. Sin considerar a Paraguay
+kruskal.test(Profundidad ~ Pais, data = data_terremotos[data_terremotos$Pais!='paraguay',])
+```
+
+Dado que el p-value es menor a la 0.05 por lo que rechazamos la hipotesis nula y aceptamos la hipotesis alternativa, que es que la Profundida muestra diferencias significativas para los diferentes paises.
+
+Por lo tanto, concluimos que **los paises no tienen la misma Magnitud y la Profundida estadisticamente.** Una vez comprobada las diferencias de las medidas, comprobaremos si los paises en los primeros lugares son estadisticamente superiores a los demás.
+
+***Primero, analizaremos la Magnitud.*** Estamos frente a un constraste de dos muestras independientes con varianzas desconocidas diferentes; además por el teorema de límite central (muestras mayores a 30) se puede asumir normalidad. Por lo tanto podemos utilizar el t-test para realizar este contraste de hipotesis.
+
+Validaremos si la Magnitud de Brazil (1°) es superior a Chile (2°). Las hipotesis son:
+H0: La Magnitud media de Brazil y Chile son iguales.
+H1: La Magnitud media de Brazil es mayor a la de Chile.
+
+Aplicando el t-test:
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+t.test(data_terremotos$Magnitud[data_terremotos$Pais=='brazil'],data_terremotos$Magnitud[data_terremotos$Pais=='chile'],alternative="greater", var.equal=FALSE)
+```
+
+El p-value es menor al una significancia de 0.01. Por lo que se rechaza la hipotesis nula y se acepta la alternativa. Es decir aceptamos que Brazil tiene una Magnitud media mayor que Chile, con un nivel de confianza de 99%.
+
+Validaremos si la Magnitud de Brazil (1°) es superior a México (3°). Las hipotesis son:
+H0: La Magnitud media de Brazil y México son iguales.
+H1: La Magnitud media de Brazil es mayor a la de México
+
+Aplicando el t-test:
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+t.test(data_terremotos$Magnitud[data_terremotos$Pais=='brazil'],data_terremotos$Magnitud[data_terremotos$Pais=='mexico'],alternative="greater", var.equal=FALSE)
+```
+
+El p-value es menor al una significancia de 0.01. Por lo que se rechaza la hipotesis nula y se acepta la alternativa. Es decir aceptamos que Brazil tiene una Magnitud media mayor que México, con un nivel de confianza de 99%.
+
+**Con esto validamos que Brazil es el pais con mayor magnitud sismica de latino america**
+
+
+***Segundo, analizaremos la Profundidad*** Estamos frente a un constraste de dos muestras independientes con varianzas desconocidas diferentes; además por el teorema de límite central (muestras mayores a 30) se puede asumir normalidad. Por lo tanto podemos utilizar el t-test para realizar este contraste de hipotesis.
+
+Validaremos si la Profundidad de Argentina (1°) es superior a Bolivia (2°). Las hipotesis son:
+H0: La Profundidad media de Argentina y Bolivia son iguales.
+H1: La Profundidad media de Argentina es mayor a la de Bolivia
+
+Aplicando el t-test:
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+t.test(data_terremotos$Profundidad[data_terremotos$Pais=='argentina'],data_terremotos$Profundidad[data_terremotos$Pais=='bolivia'],alternative="greater", var.equal=FALSE)
+```
+
+El p-value es menor al una significancia de 0.01. Por lo que se rechaza la hipotesis nula y se acepta la alternativa. Es decir aceptamos que Argentina tiene una Profundidad media mayor que Bolivia, con un nivel de confianza de 99%.
+
+Validaremos si la Profundidad de Argentina (1°) es superior a Brazil (3°). Las hipotesis son:
+H0: La Magnitud media de Argentina y Brazil son iguales.
+H1: La Magnitud media de Argentina es mayor a la de Brazil
+
+Aplicando el t-test:
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+t.test(data_terremotos$Profundidad[data_terremotos$Pais=='argentina'],data_terremotos$Profundidad[data_terremotos$Pais=='brazil'],alternative="greater", var.equal=FALSE)
+```
+
+El p-value es menor al una significancia de 0.01. Por lo que se rechaza la hipotesis nula y se acepta la alternativa. Es decir aceptamos que Argentina tiene una Profundidad media mayor que Brazil, con un nivel de confianza de 99%.
+
+**Con esto validamos que Argentina es el pais con mayor profundidad sismica de latino america**
+
+### Regresión Logística
+
+### Correlación
 
 ******
 # Gráficos y tablas de resultados
@@ -463,3 +406,6 @@ Analizaremos la Magnitud,
 
 Posibles puntos a adicionar:
 Utilizar los años para prueba de hipotesis.
+Analisis de extremos para las coordenadas.
+Revisar normalidad y homocedasticidad para coordenas.
+
